criacao do leitor de codigos

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,14 +3,14 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk versao.compileSdk
 
     defaultConfig {
         applicationId "leitor.universal"
-        minSdk 21
-        targetSdk 32
-        versionCode 1
-        versionName "1.0"
+        minSdk versao.minSdk
+        targetSdk versao.targetSdk
+        versionCode versao.versionCode
+        versionName versao.versionName
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
