--- a/build.gradle
+++ b/build.gradle
@@ -7,3 +7,11 @@ plugins {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext.versao = [
+        "compileSdk" : 32,
+        "minSdk" : 21,
+        "targetSdk" : 32,
+        "versionCode" : 1,
+        "versionName" : "1.0",
+]
